Fintuned home page

--- a/application/static/css/styles.css
+++ b/application/static/css/styles.css
@@ -228,7 +228,7 @@ p.card-text {
 img.gallery-img {
     width: 100%;
     height: 300px;
-    border-radius:5px;
+    border-radius:10px;
     object-fit:cover;
 }
 
@@ -286,6 +286,16 @@ img.gallery-img {
     z-index: 90;
 }
 
+.subtitle {
+    font-size: 11pt;
+}
+
+h5.card-title {
+    font-size: 15pt;
+    font-weight: 600;
+    margin-bottom: 0;
+}
+
 /* about page
 ====================*/
 
@@ -304,13 +314,14 @@ img.gallery-img {
 .cs-gallery {
     overflow: hidden;
     position: relative;
+    border-radius:10px;
     box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.3);
 }
 
 .cs-gallery .hover-overlay {
     width: 100%;
     height: 100%;
-    border-radius:5px;
+    border-radius:10px;
     position: absolute;
     top: 0;
     left: 0;
