--- a/application/templates/FullMonteWeb.html
+++ b/application/templates/FullMonteWeb.html
@@ -3,7 +3,7 @@
 {% block project_image %}
 {% load static %}
     <img class="project-intro-img" src="{% static 'images/PocketTravel/Logo.png' %}" alt="">
-    <h2>A Geographical Information System (GIS) Application</h2>
+    <h2>A Web-based Photodynamic Therapy Planning and Optimization Application</h2>
 {% endblock %}
 
 {% block sidebar_content %}
