--- a/application/templates/OregonWildlifeClassifier.html
+++ b/application/templates/OregonWildlifeClassifier.html
@@ -3,7 +3,7 @@
 {% block project_image %}
 {% load static %}
     <img class="project-intro-img" src="{% static 'images/PocketTravel/Logo.png' %}" alt="">
-    <h2>A Geographical Information System (GIS) Application</h2>
+    <h2>A Wildlife Classifier Using Machine Learning</h2>
 {% endblock %}
 
 {% block sidebar_content %}
@@ -62,7 +62,7 @@
             <p><b>Team Members:</b> Xiao Ying (Helen) Dai, Yuwei Tang, Yihan Tian, Muhammad Usama Waheed </p>
             <p><b>Duration:</b> Mar 2021 - Apr 2021 (1 month) </p>
             <p><b>Skills/Tools:</b> Python, PyTorch </p>
-            <p><b>My Role:</b> UI/UX design and research lead, secretary, backend developer </p>
+            <p><b>My Role:</b> ML researcher, software developer </p>
         </div>
     </div>
 
@@ -225,11 +225,17 @@
                     <div class="carousel-item active">
                         <div class="row section-element">
                             <div class="col-lg-6 my-auto">
+                                <div class="container">
+                                    <h5 style="background-color: #b3c0b9; border-top-left-radius: 20px; border-top-right-radius: 20px;">AlexNet + 3-Layer CNN</h5>
+                                </div>
                                 <a href="{% static 'images/OregonWildlifeClassifier/alexnet_curves.png' %}" class="fancybox" rel="ligthbox">
                                     <img class="desc-image" src="{% static 'images/OregonWildlifeClassifier/alexnet_curves.png' %}" alt="subpage item" style="height: 50%;">
                                 </a>
                             </div>
                             <div class="col-lg-6 my-auto">
+                                <div class="container">
+                                    <h5 style="background-color: #b3c0b9; border-top-left-radius: 20px; border-top-right-radius: 20px;">Resnet18</h5>
+                                </div>
                                 <a href="{% static 'images/OregonWildlifeClassifier/resnet_curves.png' %}" class="fancybox" rel="ligthbox">
                                     <img class="desc-image" src="{% static 'images/OregonWildlifeClassifier/resnet_curves.png' %}" alt="subpage item" style="height: 50%;">
                                 </a>
@@ -239,11 +245,17 @@
                     <div class="carousel-item">
                         <div class="row section-element">
                             <div class="col-lg-6 my-auto">
+                                <div class="container">
+                                    <h5 style="background-color: #b3c0b9; border-top-left-radius: 20px; border-top-right-radius: 20px;">VGG16 + 3-Layer CNN</h5>
+                                </div>
                                 <a href="{% static 'images/OregonWildlifeClassifier/vgg16_curves.png' %}" class="fancybox" rel="ligthbox">
                                     <img class="desc-image" src="{% static 'images/OregonWildlifeClassifier/vgg16_curves.png' %}" alt="subpage item" style="height: 50%;">
                                 </a>
                             </div>
                             <div class="col-lg-6 my-auto">
+                                <div class="container">
+                                    <h5 style="background-color: #b3c0b9; border-top-left-radius: 20px; border-top-right-radius: 20px;">VGG19 + 3-Layer CNN</h5>
+                                </div>
                                 <a href="{% static 'images/OregonWildlifeClassifier/vgg19_curves.png' %}" class="fancybox" rel="ligthbox">
                                     <img class="desc-image" src="{% static 'images/OregonWildlifeClassifier/vgg19_curves.png' %}" alt="subpage item" style="height: 50%;">
                                 </a>
