--- a/application/templates/PocketTravel.html
+++ b/application/templates/PocketTravel.html
@@ -46,7 +46,7 @@
             <p><b>Duration:</b> Jan 2018 - Apr 2018 (4 months) </p>
             <p><b>Skills/Tools:</b> C++, EzGL </p>
             <p><b>Outcome:</b> Top 10 in the 2018 ECE297 Leaderboard </p>
-            <p><b>My Role:</b> UI Designer, Algorithm Researcher, Backend Developer </p>
+            <p><b>My Role:</b> UI designer, algorithm researcher, backend developer </p>
         </div>
     </div>
 
