--- a/application/templates/FullMonteWeb.html
+++ b/application/templates/FullMonteWeb.html
@@ -110,7 +110,7 @@
             </p>
             <div class="container">
                 <p>Here is the portal to our final design:</p>
-                <a target="_blank" href="http://fullmontesuite.herokuapp.com/" class="btn btn-primary btn-custom" style="padding: 15px;">FullMonteWeb <i class="fas fa-external-link-alt"></i></a>
+                <a target="_blank" href="https://fullmontesuite.herokuapp.com/" class="btn btn-primary btn-custom" style="padding: 15px;">FullMonteWeb <i class="fas fa-external-link-alt"></i></a>
             </div>
         </section>
     </section>
