--- a/application/templates/cs_projects.html
+++ b/application/templates/cs_projects.html
@@ -12,7 +12,7 @@
                 <div class="col-lg-4 custom-thumbnail">
                     <h5 class="project-caption">FullMonteWeb</h5>
                     <div class="cs-gallery zoom">
-                        <img src="{% static 'images/fullmonte_web.gif' %}"" class="img-fluid gallery-img" alt="">
+                        <img src="{% static 'images/fullmonte_web.gif' %}" class="img-fluid gallery-img" alt="">
                         <a href="{% url 'FullMonteWeb' %}">
                             <div class="hover-overlay">
                                 <p class="hover-caption">See details</p>
