--- a/application/templates/art_projects.html
+++ b/application/templates/art_projects.html
@@ -5,60 +5,198 @@
 <section id="art-portfolio" class="home-art-portfolio" style="scroll-margin-top: 5vw;">
     <div class="card text-center mx-auto art-projects-card">
         <div class="card-header">
-            <h2 class="card-title" style="color: white;"> Visual Arts/Design Projects </h2>
+            <h2 class="card-title" style="color: white;"> Oil Paintings </h2>
         </div>
         <div class="card-body">
             <div class="row">
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox" rel="ligthbox">
-                        <img  src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="zoom img-fluid gallery-img"  alt="">
+                    <a href="{% static 'images/Arts/OilPainting/IMG_1987.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_1987-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="https://images.pexels.com/photos/38238/maldives-ile-beach-sun-38238.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"  class="fancybox" rel="ligthbox">
-                        <img  src="https://images.pexels.com/photos/38238/maldives-ile-beach-sun-38238.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="zoom img-fluid gallery-img"  alt="">
+                    <a href="{% static 'images/Arts/OilPainting/IMG_1988.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_1988-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
-                
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="https://images.pexels.com/photos/158827/field-corn-air-frisch-158827.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="fancybox" rel="ligthbox">
-                        <img  src="https://images.pexels.com/photos/158827/field-corn-air-frisch-158827.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="zoom img-fluid gallery-img"  alt="">
+                    <a href="{% static 'images/Arts/OilPainting/IMG_1991.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_1991-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
-                
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="https://images.pexels.com/photos/302804/pexels-photo-302804.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="fancybox" rel="ligthbox">
-                        <img  src="https://images.pexels.com/photos/302804/pexels-photo-302804.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="zoom img-fluid gallery-img"  alt="">
+                    <a href="{% static 'images/Arts/OilPainting/IMG_1990.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_1990-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
+                    </a>
+                    <a href="{% static 'images/Arts/OilPainting/IMG_1994.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_1994-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
-                
-                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="https://images.pexels.com/photos/1038914/pexels-photo-1038914.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox" rel="ligthbox">
-                        <img  src="https://images.pexels.com/photos/1038914/pexels-photo-1038914.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="zoom img-fluid gallery-img"  alt="">
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/OilPainting/IMG_1992.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_1992-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
-                
-                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="https://images.pexels.com/photos/414645/pexels-photo-414645.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox" rel="ligthbox">
-                        <img  src="https://images.pexels.com/photos/414645/pexels-photo-414645.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="zoom img-fluid gallery-img"  alt="">
-                    </a>
-                </div>
-                
-                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="https://images.pexels.com/photos/56005/fiji-beach-sand-palm-trees-56005.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="fancybox" rel="ligthbox">
-                        <img  src="https://images.pexels.com/photos/56005/fiji-beach-sand-palm-trees-56005.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="zoom img-fluid gallery-img"  alt="">
-                    </a>
-                </div>
-                
-                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="https://images.pexels.com/photos/1038002/pexels-photo-1038002.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="fancybox" rel="ligthbox">
-                        <img  src="https://images.pexels.com/photos/1038002/pexels-photo-1038002.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="zoom img-fluid gallery-img"  alt="">
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/OilPainting/IMG_1993.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_1993-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
            </div>
         </div>
     </div>
+
+
+    <div class="card text-center mx-auto art-projects-card">
+        <div class="card-header">
+            <h2 class="card-title" style="color: white;"> Sketches </h2>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Sketch/sketch1.jpeg' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/sketch1-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Sketch/sketch2.jpeg' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/sketch2-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Sketch/sketch3.jpeg' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/sketch3-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Sketch/sketch4.jpeg' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/sketch4-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Sketch/sketch5.jpeg' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/sketch5-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Sketch/sketch6.jpeg' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/sketch6-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Sketch/sketch7.jpeg' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/sketch7-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Sketch/sketch8.jpeg' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/sketch8-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Sketch/sketch9.jpeg' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/sketch9-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+           </div>
+        </div>
+    </div>
+
+
+    <div class="card text-center mx-auto art-projects-card">
+        <div class="card-header">
+            <h2 class="card-title" style="color: white;"> Digital Art </h2>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Digital/IMG_2019.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_2019-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
+                    </a>
+                    <a href="{% static 'images/Arts/Digital/IMG_2016.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_2016-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
+                    </a>
+                    <a href="{% static 'images/Arts/Digital/IMG_2022.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_2022-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Digital/IMG_2017.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_2017-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
+                    </a>
+                    <a href="{% static 'images/Arts/Digital/IMG_2021.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_2021-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
+                    </a>
+                    <a href="{% static 'images/Arts/Digital/IMG_2018.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_2018-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Digital/IMG_2023.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_2023-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
+                    </a>
+                    <a href="{% static 'images/Arts/Digital/IMG_2020.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_2020-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+           </div>
+        </div>
+    </div>
+
+    <div class="card text-center mx-auto art-projects-card">
+        <div class="card-header">
+            <h2 class="card-title" style="color: white;"> Others </h2>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Others/IMG_2024.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_2024-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
+                    </a>
+                    <a href="{% static 'images/Arts/Others/IMG_2006.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_2006-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Others/IMG_2025.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_2025-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
+                    </a>
+                    <a href="{% static 'images/Arts/Others/IMG_2027.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_2027-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="{% static 'images/Arts/Others/IMG_2026.JPG' %}" class="fancybox" rel="ligthbox">
+                        <img  src="{% static 'images/Arts/compressed/IMG_2026-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+    $(window).scroll(function () {
+        var docViewTop = $(window).scrollTop() + 100;
+        var docViewBottom = docViewTop + $(window).height();
+
+        $( ".art-img" ).each(function(){
+            var elemTop = $(this).offset().top;
+            var elemBottom = elemTop + $(this).height();
+            if ((elemTop <= docViewBottom) && (elemBottom >= docViewTop)) {
+                $(this).removeClass('hide');
+                $(this).addClass('show');
+            } else {
+                $(this).removeClass('show');
+                $(this).addClass('hide');
+            }
+        });
+    });
+        
+</script>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 <script>
