--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -177,15 +177,14 @@
             <h2 class="card-title" style="color: white;">  Artwork Highlights 🖌</h2>
         </div>
         <div class="card-body">
-            <div class="row">
+            <div class="row d-flex justify-content-center" style="margin-bottom: 2vh;">
                 <div class="col-lg-4 custom-thumbnail">
                     <div class="card project-card zoom">
-                        <img  src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="img-fluid card-img"  alt="">
+                        <img  src="{% static 'images/Arts/OilPainting/IMG_1991.JPG' %}" class="img-fluid card-img"  alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Title</h5>
-                            <p>A blah</p>
+                            <h5 class="card-title">Oil Painting</h5>
                         </div>
-                        <a href="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox" rel="ligthbox">
+                        <a href="{% static 'images/Arts/OilPainting/IMG_1991.JPG' %}" class="fancybox" rel="ligthbox">
                             <div class="hover-overlay"></div>
                         </a>
                     </div>
@@ -193,12 +192,11 @@
 
                 <div class="col-lg-4 custom-thumbnail">
                     <div class="card project-card zoom">
-                        <img  src="https://images.pexels.com/photos/38238/maldives-ile-beach-sun-38238.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="img-fluid card-img"  alt="">
+                        <img  src="{% static 'images/Arts/Sketch/sketch3.jpeg' %}" class="img-fluid card-img"  alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Title</h5>
-                            <p>A blah</p>
+                            <h5 class="card-title">Sketching</h5>
                         </div>
-                        <a href="https://images.pexels.com/photos/38238/maldives-ile-beach-sun-38238.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox" rel="ligthbox">
+                        <a href="{% static 'images/Arts/Sketch/sketch3.jpeg' %}" class="fancybox" rel="ligthbox">
                             <div class="hover-overlay"></div>
                         </a>
                     </div>
@@ -206,12 +204,35 @@
 
                 <div class="col-lg-4 custom-thumbnail">
                     <div class="card project-card zoom">
-                        <img  src="https://images.pexels.com/photos/158827/field-corn-air-frisch-158827.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img-fluid card-img"  alt="">
+                        <img  src="{% static 'images/Arts/Digital/IMG_2019.JPG' %}" class="img-fluid card-img"  alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Title</h5>
-                            <p>A blah</p>
+                            <h5 class="card-title">Digital Art</h5>
                         </div>
-                        <a href="https://images.pexels.com/photos/158827/field-corn-air-frisch-158827.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="fancybox" rel="ligthbox">
+                        <a href="{% static 'images/Arts/Digital/IMG_2019.JPG' %}" class="fancybox" rel="ligthbox">
+                            <div class="hover-overlay"></div>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 custom-thumbnail">
+                    <div class="card project-card zoom">
+                        <img  src="{% static 'images/Arts/Others/IMG_2006.JPG' %}" class="img-fluid card-img"  alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Watercolor Painting</h5>
+                        </div>
+                        <a href="{% static 'images/Arts/Others/IMG_2006.JPG' %}" class="fancybox" rel="ligthbox">
+                            <div class="hover-overlay"></div>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 custom-thumbnail">
+                    <div class="card project-card zoom">
+                        <img  src="{% static 'images/Arts/Others/IMG_2026.JPG' %}" class="img-fluid card-img"  alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Color Pencil Sketching</h5>
+                        </div>
+                        <a href="{% static 'images/Arts/Others/IMG_2026.JPG' %}" class="fancybox" rel="ligthbox">
                             <div class="hover-overlay"></div>
                         </a>
                     </div>
